--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 body {
-  margin-top: 100px;
+  margin-top: 100px 0;
 }
 h1,
 h2,
@@ -14,6 +14,7 @@ h3 {
 h1 {
   font-size: 96px;
 }
+
 h2 {
   font-size: 48px;
 }
@@ -67,4 +68,26 @@ p {
 }
 .email-link:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 46px;
+    line-height: 1.5;
+  }
+  h2 {
+    font-size: 36px;
+    text-align: center;
+  }
+  h3 {
+    font-size: 26px;
+  }
+  p {
+    text-align: center;
+  }
+  .launch-button {
+    display: block;
+    text-align: center;
+    margin: 0 90px;
+  }
 }
