--- a/style.css
+++ b/style.css
@@ -71,12 +71,16 @@ p {
 }
 
 @media (max-width: 576px) {
+  body {
+    margin-top: 60px;
+    margin-bottom: 50px;
+  }
   h1 {
     font-size: 46px;
     line-height: 1.5;
   }
   h2 {
-    font-size: 36px;
+    font-size: 40px;
     text-align: center;
   }
   h3 {
@@ -89,5 +93,11 @@ p {
     display: block;
     text-align: center;
     margin: 0 90px;
+  }
+}
+@media (max-width: 1030px) {
+  body {
+    margin-top: 70px;
+    margin-bottom: 50px;
   }
 }
